Fixed layout issues

--- a/src/app/details/details.component.css
+++ b/src/app/details/details.component.css
@@ -63,6 +63,10 @@ section {
     margin-bottom: 250px;
 }
 
+.post-form {
+    width: 100%;
+}
+
 .add-post-btn i {
     font-size: 26px;
 }
@@ -140,7 +144,7 @@ button:hover {
 }
 
 .card-body {
-    padding: 10px 0px;
+    padding: 10px;
     text-align: left;
 }
 
